--- a/src/Sy.Avalonia.Material/Themes/Controls/SegmentedButton.axaml
+++ b/src/Sy.Avalonia.Material/Themes/Controls/SegmentedButton.axaml
@@ -37,7 +37,7 @@
 		<Setter Property="ClipToBounds" Value="False" />
 		<Setter Property="Cursor" Value="Hand" />
 		<Setter Property="Foreground" Value="{DynamicResource md.sys.color.on-surface}" />
-		<Setter Property="Height" Value="{DynamicResource md.comp.button.default.container.height}" />
+		<Setter Property="Height" Value="40" />
 		<Setter Property="MinWidth" Value="64" />
 		<Setter Property="HorizontalContentAlignment" Value="Center" />
 		<Setter Property="Padding" Value="{DynamicResource md.comp.sbutton.default.container.padding}" />
@@ -93,14 +93,14 @@
 							<c:MaterialIconEx 
 									x:Name="PART_Icon"
 									CheckedIcon="{TemplateBinding c:ToggleButtonHelper.CheckedIcon}"
-									Height="{DynamicResource md.comp.button.default.icon.size}"
+									Height="18"
 									IndeterminateIcon="{TemplateBinding c:ToggleButtonHelper.IndeterminateIcon}"
 									IsChecked="{TemplateBinding ToggleButton.IsChecked}"
 									IsCheckedVisible="{TemplateBinding c:ToggleButtonHelper.IsCheckedIconVisible}"
 									IsIndeterminateVisible="{TemplateBinding c:ToggleButtonHelper.IsIndeterminateIconVisible}"
 									IsUncheckedVisible="{TemplateBinding c:ButtonHelper.IsIconVisible}"
 									UncheckedIcon="{TemplateBinding c:ButtonHelper.Icon}"
-									Width="{DynamicResource md.comp.button.default.icon.size}" />
+									Width="18" />
 							<c:ContentPresenterEx 
 									x:Name="PART_ContentPresenter"
 									Content="{TemplateBinding Content}"
