--- a/samples/MaterialDemo/App.axaml
+++ b/samples/MaterialDemo/App.axaml
@@ -1,17 +1,18 @@
 <Application
-		xmlns="https://github.com/avaloniaui"
-		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:mat="using:Sy.Avalonia.Material.Themes"
-		xmlns:ico="using:Material.Icons.Avalonia"
-		x:Class="MaterialDemo.App"
-		RequestedThemeVariant="Light">
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mat="using:Sy.Avalonia.Material.Themes"
+    xmlns:ico="using:Material.Icons.Avalonia"
+    x:Class="MaterialDemo.App"
+    RequestedThemeVariant="Light">
     <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
-  
-	<Application.Styles>
-    <FluentTheme />
-		<mat:MaterialTheme />
-		<ico:MaterialIconStyles />
-  </Application.Styles>
-	
-	<Application.Resources />
+
+    <Application.Styles>
+        <FluentTheme />
+        <StyleInclude Source="avares://Avalonia.Controls.ColorPicker/Themes/Fluent/Fluent.xaml" />
+        <mat:MaterialTheme />
+        <ico:MaterialIconStyles />
+    </Application.Styles>
+
+    <Application.Resources />
 </Application>
